Remove RenderCV from pdfcreator

--- a/cv/en.tex
+++ b/cv/en.tex
@@ -15,7 +15,7 @@
 \usepackage[
     pdftitle={Arthur Bied-Charreton's CV},
     pdfauthor={Arthur Bied-Charreton},
-    pdfcreator={LaTeX with RenderCV},
+    pdfcreator={LaTeX},
     colorlinks=true,
     urlcolor=primaryColor
 ]{hyperref}
