Reformulate taskmaster project description

--- a/cv/en.tex
+++ b/cv/en.tex
@@ -276,7 +276,7 @@
     \begin{onecolentry}
         \begin{highlights}
             \item Manages processes with configurable policies, health checks, and a control shell
-            \item Keeps track of process-related events using a finite state machine
+            \item Finite state machine keeping track of process-related events
             \item Allows for starting processes with deescalated privileges, configuration hot-reload, and real-time monitoring 
         \end{highlights}
     \end{onecolentry}
