Refine CV content and formatting in en.tex

--- a/cv/en.tex
+++ b/cv/en.tex
@@ -204,7 +204,7 @@
         \textbf{Software Engineer Intern}, EVVA -- Vienna, Austria
     \end{twocolentry}
 
-    \vspace{0.10 cm}
+    \vspace{0.05 cm}
     
     \begin{onecolentry}
         \begin{highlights}
@@ -213,14 +213,14 @@
         \end{highlights}
     \end{onecolentry}
 
-    \vspace{0.2 cm}
+    \vspace{0.15 cm}
 
     \begin{twocolentry}
         {February 2024 – July 2024}
         \textbf{Student Support - IT Delivery}, Raiffeisenlandesbank NÖ-Wien -- Vienna, Austria
     \end{twocolentry}
 
-    \vspace{0.10 cm}
+    \vspace{0.05 cm}
 
     \begin{onecolentry}
         \begin{highlights}
@@ -236,15 +236,16 @@
         \href{https://github.com/rust-lang/rust/}{\textbf{Rust Compiler Contributor}}
     \end{twocolentry}
 
-    \vspace{0.10 cm}
+    \vspace{0.05 cm}
     
     \begin{onecolentry}
         \begin{highlights}
-            \item Fixed x86 calling convention implementation in rustc, resolving regparm parameter passing issues
+            \item Fixed x86 calling convention implementation in rustc for struct returns and register parameters
+            \item Contributed Assembly tests contributing to the safe development of new features
         \end{highlights}
     \end{onecolentry}
 
-    \vspace{0.2 cm}
+    \vspace{0.1 cm}
 
 
     \begin{twocolentry}
@@ -252,7 +253,7 @@
         \href{https://github.com/kentucky-fried-kernel/kfs}{\textbf{32-bit Kernel}}
     \end{twocolentry}
 
-    \vspace{0.10 cm}
+    \vspace{0.05 cm}
     
     \begin{onecolentry}
         \begin{highlights}
@@ -262,14 +263,14 @@
     \end{onecolentry}
 
 
-    \vspace{0.2 cm}
+    \vspace{0.1 cm}
 
     \begin{twocolentry}
         {C++}
         \href{https://github.com/winstonallo/webserv}{\textbf{HTTP Webserver}}
     \end{twocolentry}
 
-    \vspace{0.10 cm}
+    \vspace{0.05 cm}
     
     \begin{onecolentry}
         \begin{highlights}
