--- a/cv/en.tex
+++ b/cv/en.tex
@@ -114,7 +114,7 @@
         \LenToUnit{\paperwidth-2 cm-0 cm+0.05cm},
         \LenToUnit{\paperheight-1.0 cm}
     ){\vtop{{\null}\makebox[0pt][c]{
-        \small\color{gray}\textit{Last updated in July 2025}\hspace{\widthof{Last updated in July 2025}}
+        \small\color{gray}\textit{Last updated in September 2025}\hspace{\widthof{Last updated in September 2025}}
     }}}
   }
 }
@@ -157,7 +157,7 @@
     \vspace{15 pt - 0.3 cm}
 
     \begin{onecolentry}
-        Software engineer passionate about systems programming, infrastructure, and open source. 
+        Software engineer passionate about systems programming, infrastructure, and open source.
     \end{onecolentry}
 
     \vspace{-0.2 cm}
@@ -181,7 +181,20 @@
     \end{onecolentry}
 
     \section{Experience}
-        
+
+    \begin{twocolentry}
+        {September 2025 – present}
+        \textbf{Software Engineer}, black.com -- Vienna, Austria
+    \end{twocolentry}
+
+    \vspace{0.10 cm}
+    
+    \begin{onecolentry}
+        \begin{highlights}
+            \item Implementing end-to-end encrypted messaging system using post-quantum cryptographic primitives (Kyber/Dilithium) with reference implementations in Node.js and Rust/WebAssembly
+        \end{highlights}
+    \end{onecolentry}
+    \vspace{0.2cm}
     \begin{twocolentry}
         {March 2025 – Aug 2025}
         \textbf{Software Engineer Intern}, Fronius -- Vienna, Austria
@@ -191,9 +204,9 @@
     
     \begin{onecolentry}
         \begin{highlights}
-            \item Designed and implemented a validation system for ML pipelines, monitoring each stage's inputs \& outputs, allowing for early anomaly detection
-            \item Developed a Python SDK to facilitate mocking of pipeline dependencies in integration tests, shifting anomaly detection left from manual testing of the whole pipelines to automated CI for single steps 
-            \item Made continuous improvements to the CI setup, ultimately reducing average execution time by over 80\%
+            \item Designed a validation system for ML pipelines, enabling early anomaly detection at each stage
+            \item Developed a Python SDK to mock pipeline dependencies, allowing integration tests and CI-based checks
+            \item Optimized CI execution time by 80\% by streamlining dependencies and implementing a caching mechanism
         \end{highlights}
     \end{onecolentry}
 
@@ -208,8 +221,8 @@
     
     \begin{onecolentry}
         \begin{highlights}
-            \item Developed an email classification system in Rust and Python, which reduced manual order processing workload equivalent to 2 full-time positions
-            \item Deployed an on-premises CI/CD pipeline, significantly reducing deployment times 
+            \item Designed an email classification system (Rust/Python), automating ~80\% of manual order processing workload
+            \item Set up a self-hosted CI/CD stack using Jenkins, Docker, and Ansible, reducing manual deployment friction
         \end{highlights}
     \end{onecolentry}
 
@@ -229,27 +242,40 @@
         \end{highlights}
     \end{onecolentry}
 
-    \section{Projects}
+    \section{Open Source}
 
-    \begin{twocolentry}
+     \begin{twocolentry}
         {Rust, LLVM, x86 Assembly}
-        \href{https://github.com/rust-lang/rust/}{\textbf{Rust Compiler Contributor}}
+        \href{https://github.com/rust-lang/rust/}{\textbf{rust-lang/rust} - Rust Compiler}
     \end{twocolentry}
 
     \vspace{0.05 cm}
     
     \begin{onecolentry}
         \begin{highlights}
-            \item Fixed x86 calling convention implementation in rustc for struct returns and register parameters
-            \item Contributed Assembly tests contributing to the safe development of new features
+            \item Fixed x86 calling convention implementation in rustc and contributed Assembly output tests
         \end{highlights}
     \end{onecolentry}
 
     \vspace{0.1 cm}
 
+        \begin{twocolentry}
+        {Rust, Python}
+        \href{https://github.com/astral-sh/uv/}{\textbf{astral-sh/uv} - Faster Python Package Manager}
+    \end{twocolentry}
+
+    \vspace{0.05 cm}
+    
+    \begin{onecolentry}
+        \begin{highlights}
+            \item Contributed a compatibility fix making the transition from pip to uv more streamlined 
+        \end{highlights}
+    \end{onecolentry}
+
+    \section{Projects}
 
     \begin{twocolentry}
-        {Rust, x86 Assembly}
+        {Rust, x86 Assembly, QEMU}
         \href{https://github.com/kentucky-fried-kernel/kfs}{\textbf{32-bit Kernel}}
     \end{twocolentry}
 
@@ -257,29 +283,11 @@
     
     \begin{onecolentry}
         \begin{highlights}
-            \item Development of a bootable 32-bit kernel to deepen understanding of operating systems  
-            \item Implementation of core functionalities such as ASM boot code, screen interfacing, and interrupt tables
+            \item 32-bit kernel with ASM bootloader, screen interfacing, interrupt tables, and memory management 
         \end{highlights}
     \end{onecolentry}
 
-
-    \vspace{0.1 cm}
-
-    \begin{twocolentry}
-        {C++}
-        \href{https://github.com/winstonallo/webserv}{\textbf{HTTP Webserver}}
-    \end{twocolentry}
-
-    \vspace{0.05 cm}
-    
-    \begin{onecolentry}
-        \begin{highlights}
-            \item Single-threaded HTTP webserver relying solely on async I/O, handling GET, POST, PUT, and DELETE methods
-            \item Support for cookies, CGI, file uploads, and static content delivery
-        \end{highlights}
-    \end{onecolentry}
-
-    \vspace{0.2 cm}
+    \vspace{0.2cm}
 
     \begin{twocolentry}
         {Rust}
@@ -295,7 +303,23 @@
         \end{highlights}
     \end{onecolentry}
 
-    \vspace{0.2cm}
+    \vspace{0.1 cm}
+
+    \begin{twocolentry}
+        {C++}
+        \href{https://github.com/winstonallo/webserv}{\textbf{HTTP Webserver}}
+    \end{twocolentry}
+
+    \vspace{0.05 cm}
+    
+    \begin{onecolentry}
+        \begin{highlights}
+            \item Single-threaded HTTP webserver relying on async I/O, supporting cookies, CGI, file uploads and content delivery
+        \end{highlights}
+    \end{onecolentry}
+
+    \vspace{0.2 cm}
+
 
     \begin{twocolentry}
         {C, x86 Assembly}
@@ -306,27 +330,27 @@
 
     \begin{onecolentry}
         \begin{highlights}
-            \item Packer for 64-bit ELF binaries with PIE support
-            \item Pack-time code encryption, and self-decryption via shellcode-injection
+            \item ELF binary packer with PIE support, encryption, and injected self-decrypting shellcode
         \end{highlights}
     \end{onecolentry}
 
     \section{Skills \& Technologies}
 
     \begin{onecolentry}
-        \textbf{Programming Languages:} Rust, Python, C, C++, Golang, TypeScript, SQL, Bash
+        \textbf{Programming Languages:} Rust, Python, C, C++, JavaScript, TypeScript, Go, Bash, SQL
     \end{onecolentry}
 
-    \vspace{0.2 cm}
+    \vspace{0.1 cm}
 
     \begin{onecolentry}
-        \textbf{Technologies:} Git, Linux, Docker, Kubernetes, GitLab CI/CD, GitHub Actions, Jenkins, Ansible
+        \textbf{Tools \& Infrastructure:} Linux, Git, GitLab CI/CD, GitHub Actions, Docker, Kubernetes
     \end{onecolentry}
 
-    \vspace{0.2 cm}
-
+    \vspace{0.1 cm}
+    
     \begin{onecolentry}
         \textbf{Spoken Languages:} French (Native), German (Fluent), English (Fluent)
     \end{onecolentry}
+    
 
 \end{document}
