--- a/cv/en.tex
+++ b/cv/en.tex
@@ -139,7 +139,7 @@
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{mailto:arthurbiedchar@gmail.com}{arthurbiedchar@gmail.com}}%
+        \mbox{\hrefWithoutArrow{mailto:arthurbiedchar@gmail.com}{arthur@biedcharreton.com}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
